[gd_scene load_steps=20 format=2]

[ext_resource path="res://scenes/Game.gd" type="Script" id=1]
[ext_resource path="res://objects/Key.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Normal.tres" type="Theme" id=3]
[ext_resource path="res://objects/Combo.tscn" type="PackedScene" id=4]
[ext_resource path="res://objects/BG/VerticalBackgroundScene.tscn" type="PackedScene" id=5]
[ext_resource path="res://sprites/SweetMeterBacking.png" type="Texture" id=6]
[ext_resource path="res://objects/ScoreIndicator.tscn" type="PackedScene" id=7]
[ext_resource path="res://sprites/SweetMeter.png" type="Texture" id=8]
[ext_resource path="res://sprites/ToastMeterBacking.png" type="Texture" id=9]
[ext_resource path="res://sprites/ToastMeter.png" type="Texture" id=10]
[ext_resource path="res://objects/SpinnyBread.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/KarmaticArcade.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://sprites/Pause.png" type="Texture" id=13]

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform float point = 2.8;

void fragment() {
	COLOR = texture(TEXTURE, UV);
	COLOR = vec4(0.0, 0.0, 0.0, point - (UV.y * 5.0));
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/point = 2.8

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 130, 15 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 320, 10 )

[sub_resource type="DynamicFont" id=5]
size = 41
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=6]
size = 31
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 12 )

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundScene" parent="." instance=ExtResource( 5 )]

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = 44.0
margin_top = 270.0
margin_right = 640.0
margin_bottom = 344.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
margin_left = 140.0
margin_top = 5.0
margin_right = 456.0
margin_bottom = 69.0
custom_constants/separation = 20

[node name="Left" parent="CenterContainer/HBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 64.0
margin_bottom = 64.0
direction = 3

[node name="Down" parent="CenterContainer/HBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 84.0
margin_top = 0.0
margin_right = 148.0
margin_bottom = 64.0
direction = 2

[node name="Up" parent="CenterContainer/HBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 168.0
margin_top = 0.0
margin_right = 232.0
margin_bottom = 64.0

[node name="Right" parent="CenterContainer/HBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 252.0
margin_top = 0.0
margin_right = 316.0
margin_bottom = 64.0
direction = 1

[node name="Blind" type="ColorRect" parent="."]
visible = false
material = SubResource( 3 )
margin_right = 640.0
margin_bottom = 360.0
rect_pivot_offset = Vector2( 320, 180 )
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinnyBread" parent="." instance=ExtResource( 11 )]
margin_left = 548.0
margin_top = 48.0
margin_right = -92.0
margin_bottom = -312.0

[node name="ProgressCenter" type="CenterContainer" parent="."]
margin_top = 344.0
margin_right = 640.0
margin_bottom = 360.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SongProgress" type="HSlider" parent="ProgressCenter"]
margin_left = 20.0
margin_right = 620.0
margin_bottom = 16.0
rect_min_size = Vector2( 600, 0 )
rect_pivot_offset = Vector2( 300, 8 )
theme = ExtResource( 3 )
custom_styles/slider = SubResource( 1 )
custom_styles/grabber_area = SubResource( 1 )
max_value = 1.0
step = 0.0

[node name="PopupsCenter" type="CenterContainer" parent="."]
margin_top = 196.0
margin_right = 640.0
margin_bottom = 270.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreIndicator" parent="PopupsCenter" instance=ExtResource( 7 )]
margin_left = 320.0
margin_top = 37.0
margin_right = 320.0
margin_bottom = 37.0

[node name="MSAccuracy" type="Label" parent="."]
margin_top = 270.0
margin_right = 176.0
margin_bottom = 344.0
theme = ExtResource( 3 )
text = "ms"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ComboCenter" type="CenterContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Combo" parent="ComboCenter" instance=ExtResource( 4 )]
margin_left = 640.0
margin_top = 348.0
margin_right = 640.0
margin_bottom = 372.0
rect_scale = Vector2( 1, 1 )

[node name="Score" type="Label" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 116.0
margin_bottom = 32.0
theme = ExtResource( 3 )
text = "Score: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Multiplier" type="VBoxContainer" parent="."]
margin_left = 8.0
margin_top = 40.0
margin_right = 180.0
margin_bottom = 95.0
custom_constants/separation = 7

[node name="Multiplier" type="Label" parent="Multiplier"]
margin_right = 172.0
margin_bottom = 24.0
theme = ExtResource( 3 )
text = "Multiplier: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Multiplier"]
margin_top = 31.0
margin_right = 172.0
margin_bottom = 46.0
rect_min_size = Vector2( 130, 0 )

[node name="TextureProgress" type="TextureProgress" parent="Multiplier/CenterContainer"]
margin_left = 21.0
margin_right = 151.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 15 )
max_value = 20.0
step = 0.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 8 )

[node name="Toast" type="VBoxContainer" parent="."]
margin_left = 8.0
margin_top = 88.0
margin_right = 180.0
margin_bottom = 143.0
custom_constants/separation = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Toast" type="Label" parent="Toast"]
margin_right = 172.0
margin_bottom = 24.0
theme = ExtResource( 3 )
text = "Toast: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Toast"]
margin_top = 31.0
margin_right = 172.0
margin_bottom = 51.0
rect_min_size = Vector2( 130, 0 )

[node name="TextureProgress" type="TextureProgress" parent="Toast/CenterContainer"]
margin_left = 36.0
margin_right = 136.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 15 )
max_value = 3.0
step = 0.0
texture_under = ExtResource( 9 )
texture_progress = ExtResource( 10 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 320, 370 )
shape = SubResource( 4 )

[node name="Tween" type="Tween" parent="."]

[node name="Credits1" type="VBoxContainer" parent="."]
margin_left = 210.0
margin_top = 75.0
margin_right = 502.0
margin_bottom = 220.0
custom_constants/separation = 62
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Credits1"]
margin_right = 292.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 5 )
text = "Songtitle"

[node name="Time" type="Label" parent="Credits1"]
margin_top = 109.0
margin_right = 292.0
margin_bottom = 145.0
custom_fonts/font = SubResource( 6 )
text = "Time"

[node name="Credits2" type="VBoxContainer" parent="."]
margin_left = 208.0
margin_top = 129.0
margin_right = 500.0
margin_bottom = 288.0
custom_constants/separation = 52
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Artist" type="Label" parent="Credits2"]
margin_right = 292.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 5 )
text = "Artist"

[node name="BPM" type="Label" parent="Credits2"]
margin_top = 99.0
margin_right = 292.0
margin_bottom = 135.0
custom_fonts/font = SubResource( 6 )
text = "BPM"

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Pause" type="Button" parent="."]
margin_left = 593.0
margin_top = 3.0
margin_right = 637.0
margin_bottom = 41.0
icon = ExtResource( 13 )

[connection signal="pressed" from="Pause" to="." method="_on_Pause_pressed"]
